trying to fix white space using margin

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3120,6 +3120,7 @@
 
 		.wrapper.featured {
 			text-align: center;
+			margin: 50px;
 		}
 
 			.wrapper.featured > .inner {
